@@ -35,7 +35,7 @@ AC_CHECK_FUNCS(clock confstr fcntl gethostent sysconf uname dnl
 getlogin getpwent getpwnam getpwuid endpwent setpwent dnl
 getservbyport getservbyname getservent setservent endservent dnl
 openlog setlogmask syslog closelog strftime strptime mktime dnl
-getpgid setpgrp getsid setpgid setsid kill dnl
+getpgid setpgrp getsid setpgid setsid kill pathconf fpathconf dnl
 getgrgid getgrnam getgrent endgrent setgrent dnl
 endutxent getutxent getutxid getutxline pututxline setutxent dnl
 mkfifo mkdir creat mkstemp tempnam mkdtemp dnl
