@@ -220,6 +220,13 @@
     &nil;), by calling <function role="unix">sysconf</function>
     and <function role="unix">confstr</function> respectively.
  </simpara></listitem></varlistentry>
+ <varlistentry><term><code>(<function>POSIX:PATHCONF</function>
+    &path; &optional-amp; &what-r;)</code></term>
+  <listitem><simpara>Return the specified configuration parameter or a
+    list of all available parameters (when &what-r; is missing or
+    &nil;), by calling <function role="unix">fpathconf</function> on
+    open file streams and <function role="unix">pathconf</function> on
+    all other &path-des;s.</simpara></listitem></varlistentry>
  <varlistentry id="rlimit"><term><code>(&rlimit;
     &optional-amp; &what-r;)</code></term>
   <listitem><simpara>Return the current and the maximal limits as two
