@@ -1,3 +1,7 @@
+2006-06-23  Sam Steingold  <sds@podval.org>
+
+	* modules/syscalls/calls.c (POSIX::PATHCONF): new function
+
 2006-06-21  Sam Steingold  <sds@podval.org>
 
 	fixed bug #[ 1426388 ]: rawsock :end vs. :size confusion
